--- a/.github/workflows/msbuild.yml
+++ b/.github/workflows/msbuild.yml
@@ -19,6 +19,7 @@ jobs:
     - uses: actions/checkout@v4
 
     - name: build
+      shell: cmd
       run: |
         cd main
         .\build_Bat.bat
