--- a/.github/workflows/msbuild.yml
+++ b/.github/workflows/msbuild.yml
@@ -18,6 +18,12 @@ jobs:
     steps:
     - uses: actions/checkout@v4
 
+    - name: Install powershell
+      # You may pin to the exact commit or the version.
+      # uses: cakhanif/action-install-powershell@9287716f19f5547fb975cd59dc23b286fabffdf8
+      uses: cakhanif/action-install-powershell@v1
+          
+
     - name: build
       shell: cmd
       run: |
