--- a/.github/workflows/msbuild.yml
+++ b/.github/workflows/msbuild.yml
@@ -18,7 +18,7 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - name: build
-      shell: powershell.exe
+      shell: powershell -command "& '{0}'"
       run: |
         chmod -R +x .\main .\include .\Compiler
         cd main
