--- a/.github/workflows/msbuild.yml
+++ b/.github/workflows/msbuild.yml
@@ -17,9 +17,10 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
+    - name: run powershell
+      run: powershell.exe
     - name: build
       run: |
-        powershell.exe
         chmod -R +x .\main .\include .\Compiler
         cd main
         .\build_Bat.bat
