--- a/.github/workflows/msbuild.yml
+++ b/.github/workflows/msbuild.yml
@@ -20,5 +20,5 @@ jobs:
     - name: permission
       run: chmod -R +x .\main .\include .\Compiler
     - name: run powershell and build
-      run: powershell.exe -command "cd main && .\build_Bat.bat"
+      run: powershell.exe -command "(cd main) -and (.\build_Bat.bat)"
       #run: powershell.exe -Command " .\build_Bat.bat"
