--- a/.github/workflows/msbuild.yml
+++ b/.github/workflows/msbuild.yml
@@ -21,15 +21,7 @@ jobs:
     - name: permission
       run: chmod -R +x .\main .\include .\Compiler
 
-    - name: move
-      run: cd main
-
-    - name: check
-      run: pwd
-      
     - name: run powershell and build
       run: powershell .\build_Bat.bat
+      working-directory: .\main
       #run: powershell.exe -Command " .\build_Bat.bat"
-
-    - name: check
-      run: pwd
