--- a/.github/workflows/msbuild.yml
+++ b/.github/workflows/msbuild.yml
@@ -22,7 +22,7 @@ jobs:
       run: chmod -R +x .\main .\include .\Compiler
 
     - name: run
-      run: ../Compiler/bin/make.exe clear
+      run: ..\Compiler\bin\make.exe clear
 
     - name: run powershell and build
       run: powershell .\build_Bat.bat
