--- a/.github/workflows/msbuild.yml
+++ b/.github/workflows/msbuild.yml
@@ -17,6 +17,11 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
+
+    - name: Add msbuild to PATH
+      uses: microsoft/setup-msbuild@v2
+      with:
+        msbuild-architecture: x64
     
     - name: permission
       run: chmod -R +x .\main .\include .\Compiler
