--- a/main/MAKEFILE
+++ b/main/MAKEFILE
@@ -21,7 +21,7 @@ TARGET = a_hara
 #----- path_dir -------
 PATH = ..
 #----- C source files -----
-INCLUDE = $(PATH)\include
+INCLUDE = $(PATH)/include
 SRC = DSP280x_Adc.c DSP280x_EPwm.c DSP280x_EQep.c DSP280x_CpuTimers.c DSP280x_DefaultIsr.c DSP280x_GlobalVariableDefs.c DSP280x_Gpio.c DSP280x_MemCopy.c DSP280x_PieCtrl.c DSP280x_PieVect.c DSP280x_Sci.c DSP280x_Spi.c DSP280x_SysCtrl.c VFD.c Main.c Menu.c Motor.c Sensor.c Position.c Rom.c Search.c Fastrun.c Extremerun.c
 
 #----- ASM source files -----
@@ -31,10 +31,10 @@ ASRC =DSP280x_CodeStartBranch.asm DSP280x_usDelay.asm
 CMDFILE	= DSP280x_Headers_nonBIOS.cmd F2808.cmd
 
 #----- Compiler directory & exe files -----
-PROG_DIR = $(PATH)\Compiler\bin
-CC      = $(PROG_DIR)\cl2000.exe
-ASM     = $(PROG_DIR)\asm2000.exe
-LNK     = $(PROG_DIR)\lnk2000.exe
+PROG_DIR = $(PATH)/Compiler/bin
+CC      = $(PROG_DIR)/cl2000.exe
+ASM     = $(PROG_DIR)/asm2000.exe
+LNK     = $(PROG_DIR)/lnk2000.exe
 
 OBJS = $(SRC:.c=.obj) $(ASRC:.asm=.obj)
 
@@ -47,9 +47,9 @@ C_OPT = -g -s -k -pm -op0 -o3 -d"LARGE_MODEL" -mf -ml -v28 -i$(INCLUDE)
 ASM_OPT = -v28 
 
 #----- Link option -----
-#LNK_OPT = -w -heap1 -o$(TARGET).out -m$(TARGET).map $(OBJS) $(CMDFILE) -l C:\Users\kywzoro\Desktop\FinAl_VArHAe_08\Compiler\lib\rts2800_ml.lib C:\Users\kywzoro\Desktop\FinAl_VArHAe_08\Compiler\lib\IQmath.lib 
-#LNK_OPT = -c -farheap0x700 -heap0x01 -o$(TARGET).out -m$(TARGET).map $(OBJS) $(CMDFILE) -stack0x600 -w -x -l C:\Users\kywzoro\Desktop\FinAl_VArHAe_08\Compiler\lib\rts2800_ml.lib C:\Users\kywzoro\Desktop\FinAl_VArHAe_08\Compiler\lib\IQmath.lib 
-LNK_OPT = -c -farheap0x700 -heap0x01 -o$(TARGET).out -m$(TARGET).map $(OBJS) $(CMDFILE) -stack0x600 -w -x -l $(PATH)\Compiler\lib\rts2800_ml.lib $(PATH)\Compiler\lib\IQmath.lib 
+#LNK_OPT = -w -heap1 -o$(TARGET).out -m$(TARGET).map $(OBJS) $(CMDFILE) -l C:/Users/kywzoro/Desktop/FinAl_VArHAe_08/Compiler/lib/rts2800_ml.lib C:/Users/kywzoro/Desktop/FinAl_VArHAe_08/Compiler/lib/IQmath.lib 
+#LNK_OPT = -c -farheap0x700 -heap0x01 -o$(TARGET).out -m$(TARGET).map $(OBJS) $(CMDFILE) -stack0x600 -w -x -l C:/Users/kywzoro/Desktop/FinAl_VArHAe_08/Compiler/lib/rts2800_ml.lib C:/Users/kywzoro/Desktop/FinAl_VArHAe_08/Compiler/lib/IQmath.lib 
+LNK_OPT = -c -farheap0x700 -heap0x01 -o$(TARGET).out -m$(TARGET).map $(OBJS) $(CMDFILE) -stack0x600 -w -x -l $(PATH)/Compiler/lib/rts2800_ml.lib $(PATH)/Compiler/lib/IQmath.lib 
 
 # Compile: create object files from C source files.
 %.obj : %.c
@@ -70,6 +70,6 @@ all: $(TARGET).out
 
 # Target: clean project.
 clean: 
-	del *.out
-	del *.map
-	del *.obj
+	rm -rf *.out
+	rm -rf *.map
+	rm -rf *.obj
