--- a/.github/workflows/msbuild.yml
+++ b/.github/workflows/msbuild.yml
@@ -14,6 +14,8 @@ on:
 jobs:
   run_command:
     runs-on: windows-2022
+    env:
+      TARGET_BAT: a_hara
 
     steps:
     - uses: actions/checkout@v4
@@ -22,13 +24,15 @@ jobs:
       run: chmod -R +x ./main ./include ./Compiler
       shell: bash
 
-    - name: run
-      run: ../Compiler/bin/make.exe
+    - name: build
+      run: |
+        ../Compiler/bin/make.exe
+        ../Compiler/bin/hex2000.exe ${ env.TARGET_BAT }.out -o ${ env.TARGET_BAT }.hex -map ${ env.TARGET_BAT }.map -i -datawidth 16 -memwidth 16 -romwidth 16 
       shell: bash
       working-directory: ./main
 
-    - name: build
-      run: ./build_Bat.bat
-      shell: bash
-      working-directory: ./main
-      #run: powershell.exe -Command " ./build_Bat.bat"
+#    - name: build
+#      run: ./build_Bat.bat
+#      shell: bash
+#      working-directory: ./main
+#      #run: powershell.exe -Command " ./build_Bat.bat"
