--- a/.github/workflows/msbuild.yml
+++ b/.github/workflows/msbuild.yml
@@ -14,8 +14,6 @@ on:
 jobs:
   run_command:
     runs-on: windows-2022
-    env:
-      TARGET_BAT: a_hara
 
     steps:
     - uses: actions/checkout@v4
@@ -27,9 +25,11 @@ jobs:
     - name: build
       run: |
         ../Compiler/bin/make.exe
-        ../Compiler/bin/hex2000.exe ${ env.TARGET_BAT }.out -o ${ env.TARGET_BAT }.hex -map ${ env.TARGET_BAT }.map -i -datawidth 16 -memwidth 16 -romwidth 16 
+        ../Compiler/bin/hex2000.exe $TARGET_BAT.out -o $TARGET_BAT.hex -map $TARGET_BAT.map -i -datawidth 16 -memwidth 16 -romwidth 16 
       shell: bash
       working-directory: ./main
+      env:
+        TARGET_BAT: a_hara
 
 #    - name: build
 #      run: ./build_Bat.bat
