--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "Compiler1"]
-	path = Compiler1
+[submodule "Compiler"]
+	path = Compiler
 	url = https://github.com/nodang/c28x_complier
