--- a/.github/workflows/msbuild.yml
+++ b/.github/workflows/msbuild.yml
@@ -24,7 +24,7 @@ jobs:
 
     - name: build
       run: |
-        ..\Compiler\bin\make.exe
+        ..\\Compiler\\bin\\make.exe
         ..\Compiler\bin\hex2000.exe $TARGET_BAT.out -o $TARGET_BAT.hex -map $TARGET_BAT.map -i -datawidth 16 -memwidth 16 -romwidth 16
         mkdir ..\build
         mv *.out *.map *.hex ..\build
