--- a/.github/workflows/msbuild.yml
+++ b/.github/workflows/msbuild.yml
@@ -17,6 +17,13 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
+      with:
+        submodule: true
+        ssh-key: ${{ secrets.SSH_KEY }}
+
+    - name: submodule update
+      run: git submodule update --init --recursive
+      shell: bash
     
     - name: permission
       run: chmod -R +x ./main ./include ./Compiler
@@ -24,7 +31,6 @@ jobs:
 
     - name: build
       run: |
-        git submodule update --init --recursive
         ../Compiler/bin/make
         ../Compiler/bin/hex2000 $TARGET_BAT.out -o $TARGET_BAT.hex -map $TARGET_BAT.map -i -datawidth 16 -memwidth 16 -romwidth 16
         mkdir ../build
