--- a/.github/workflows/msbuild.yml
+++ b/.github/workflows/msbuild.yml
@@ -22,7 +22,9 @@ jobs:
         ssh-key: ${{ secrets.SSH_KEY }}
 
     - name: submodule update
-      run: git submodule update --init --recursive
+      run: |
+        auth_header="$(git config --local --get http.https://github.com/.extraheader)"
+        git submodule update --init --recursive
       shell: bash
     
     - name: permission
