--- a/.github/workflows/msbuild.yml
+++ b/.github/workflows/msbuild.yml
@@ -23,6 +23,8 @@ jobs:
     - name: submodule update
       run: |
         git submodule update --recursive
+        cd Compiler
+        ls
       shell: bash
     
     - name: permission
