--- a/.github/workflows/msbuild.yml
+++ b/.github/workflows/msbuild.yml
@@ -24,6 +24,8 @@ jobs:
       run: |
         git submodule update --recursive
         ls Compiler
+        ll compiler
+        tree
       shell: bash
     
     - name: permission
