--- a/.github/workflows/msbuild.yml
+++ b/.github/workflows/msbuild.yml
@@ -27,14 +27,15 @@ jobs:
 
     - name: build
       run: |
-        ../Compiler/bin/make
-        ../Compiler/bin/hex2000 $TARGET_BAT.out -o $TARGET_BAT.hex -map $TARGET_BAT.map -i -datawidth 16 -memwidth 16 -romwidth 16
+        ../Compiler/bin/make.exe
+        ../Compiler/bin/hex2000.exe $TARGET_BAT.out -o $TARGET_BAT.hex -map $TARGET_BAT.map -i -datawidth 16 -memwidth 16 -romwidth 16
         mkdir ../build
         mv *.out *.map *.hex ../build
       shell: bash
       working-directory: main/
       env:
         TARGET_BAT: a_hara
+        AUTO_BUILD_ENABLE: YES
 
     - name: zip release files
       uses: actions/upload-artifact@v4
